--- a/app/src/main/assets/eco-parcour-en.html
+++ b/app/src/main/assets/eco-parcour-en.html
@@ -2,30 +2,26 @@
 <html>
 <head>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-   crossorigin=""></script>
+  <link rel="stylesheet" href="leaflet.css"/>
+   
+  <script src="leaflet.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-  </script>
+  <script src="jquery.min.js"></script>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-  </script>
-    <script> 
-    /*$(function(){
-      $("#map").load("/Cartes/Carte_principale.html"); 
-    });*/
-    </script>
+  <script src="Control.TouchHover.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 /*css*/
-.pad{width:1200px;
-  height: 1920px;
+
+@font-face {
+  font-family: 'Agency FB';
+  src: URL('Agency FB.ttf') format('truetype');
+}
+
+.pad{width:775px;
+  height: 1225px;
 margin-left: auto;
 margin-right: auto;
 border-style: solid;
@@ -40,8 +36,8 @@ position: relative;
   font-size: 0px;
   border: none;
   cursor: pointer;
-  width: 140px;
-  height: 168px;
+  width: 120px;
+  height: 144px;
 
 }
 
@@ -58,14 +54,14 @@ position: relative;
 }
 
 .pad .dropdown a img {
-width: 140px;
-height: 168px;
+  width: 120px;
+  height: 144px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  bottom: 176px;
+  bottom: 150px;
   z-index: 1;
 }
 
@@ -82,20 +78,20 @@ height: 168px;
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 355px;
+  top: 2px;
   background-color: #4668B1;
   text-align: center;
   color:white;
   vertical-align: bottom;
-  border-radius: 0px 0px 20px 0px;
+  border-radius: 35px;
   z-index : 2 ;
 }
 .help a {
   color:white;
   position: absolute;
-  top:12px;
-  left: 18px;
+  top:14px;
+  left: 21px;
   text-decoration: none;
   font-size:20px;
   font-family:"Agency FB";
@@ -132,7 +128,7 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   right:0px;
   display: inline-block;
-  padding: 20px;
+  padding: 15px;
   background-color:#4668B1;
   border-radius: 0px 0px 0px 20px;
   z-index: 3;
@@ -144,7 +140,7 @@ box-shadow: black 0px 0px 5px;
  right: 0px;
   z-index: 1;
   background-color: #4668B1;
-  padding: 20px;
+  padding: 15px;
   border-radius: 0px 0px 0px 20px;
 
 }
@@ -157,9 +153,17 @@ box-shadow: black 0px 0px 5px;
 
 .interactive-map{
   background-color: #E8E0CA;
-  width:1200px;
-  height: 1920px;
+  width:775px;
+  height: 1225px;
   z-index: 0;
+}
+
+.popupCustom .leaflet-popup-tip,
+.popupCustom .leaflet-popup-content-wrapper {
+    background: #3F3F40;
+    color: #FEFEFE;
+    width : 300px;
+    font-family:"Agency FB";
 }
 
 </style>
@@ -175,7 +179,7 @@ box-shadow: black 0px 0px 5px;
   <div id="myDropdown" class="dropdown-content">
     <a href="wildlife-en.html"><img src="img/new/bouton-c.png"></a>
     <a href="eco-sante-en.html"><img src="img/new/bouton-b.png"></a>
-    <a href="core-map-en.html"><img src="img/new/bouton-a.png"></a>
+    <a href="index.html"><img src="img/new/bouton-a.png"></a>
   </div>
 </div>
 
@@ -197,7 +201,7 @@ box-shadow: black 0px 0px 5px;
 
 </div>
 
-<script>png
+<script>/*png*/
 
 /*php pour les dropdownmenu*/
 /*menu de navigation*/
