--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link rel="stylesheet" href="leaflet.css"/>
+   
+  <script src="leaflet.js"></script>
+
+  <script src="jquery.min.js"></script>
+
+  <script src="serbiaWithImage.json"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 /*css*/
-.pad{width:1200px;
-  height: 1920px;
+
+@font-face {
+  font-family: 'Agency FB';
+  src: URL('Agency FB.ttf') format('truetype');
+}
+
+.pad{width:775px;
+  height: 1225px;
 margin-left: auto;
 margin-right: auto;
 border-style: solid;
@@ -21,8 +36,8 @@ position: relative;
   font-size: 0px;
   border: none;
   cursor: pointer;
-  width: 140px;
-  height: 168px;
+  width: 120px;
+  height: 144px;
 
 }
 
@@ -35,18 +50,18 @@ position: relative;
   left: 20px;
   bottom: 20px;
   display: inline-block;
+  z-index: 4;
 }
 
 .pad .dropdown a img {
-width: 140px;
-height: 168px;
+width: 120px;
+height: 144px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  bottom: 176px;
-  z-index: 1;
+  bottom: 150px;
 }
 
 .dropdown-content a {
@@ -62,19 +77,20 @@ height: 168px;
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 355px;
+  top: 2px;
   background-color: #4668B1;
   text-align: center;
   color:white;
   vertical-align: bottom;
-  border-radius: 0px 0px 20px 0px;
+  border-radius: 35px;
+  z-index : 2 ;
 }
 .help a {
   color:white;
   position: absolute;
-  top:12px;
-  left: 18px;
+  top:14px;
+  left: 21px;
   text-decoration: none;
   font-size:20px;
   font-family: "Agency FB";
@@ -83,7 +99,7 @@ height: 168px;
 
 /*selection de la langue*/
 
-.flag-img{ 
+.flag-img{
 width: 50px;
 height: 30px;
 box-shadow: black 0px 0px 5px;
@@ -110,18 +126,18 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   right:0px;
   display: inline-block;
-  padding: 20px;
+  padding: 15px;
   background-color:#4668B1;
   border-radius: 0px 0px 0px 20px;
+  z-index: 3;
 }
 
 .langue-content {
   display: none;
   position: absolute;
  right: 0px;
-  z-index: 1;
   background-color: #4668B1;
-  padding: 20px;
+  padding: 15px;
   border-radius: 0px 0px 0px 20px;
 
 }
@@ -132,57 +148,11 @@ box-shadow: black 0px 0px 5px;
 
 .show {display: block;}
 
-.legend{
-  position: absolute;
-  background-color: #4668B1;
-  width: 800px;
-  height: 250px;
-  right: 0px;
-  bottom: 0px;
-  border-radius: 40px 0px 0px 0px;
-
-
-}
-.legend-title{
-  color: white;
-  font-size:30px;
-  font-family: "Agency FB";
-  font-weight:bold;
-  padding: 8px;
-  text-align: center;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 785px;
-}
-
 .interactive-map{
   background-color: #E8E0CA;
-  width:1200px;
-  height: 1920px;
-}
-div.scrollmenu {
-  position: absolute;
-  top: 50px;
-  background-color: rgb(0, 0, 0,0.2);
-  overflow: auto;
-  white-space: nowrap;
-  width: 800px;
-}
-
-div.scrollmenu a {
-  display: inline-block;
-  text-align: center;
-  padding: 14px;
-
-}
-
-div.scrollmenu a:hover {
-  background-color: #777;
-}
-.scrollmenu a img{
-  width: 150px;
-  height: 150px;
+  width:775px;
+  height: 1225px;
+  z-index: 0;
 }
 
 </style>
@@ -196,9 +166,9 @@ div.scrollmenu a:hover {
   <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
 
   <div id="myDropdown" class="dropdown-content">
-    <a href="eco-parcour-serb.html"><img src="img/new/bouton-d.png"></a>
-    <a href="eco-sante-serb.html"><img src="img/new/bouton-b.png"></a>
-    <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+    <a href="eco-parcour-en.html"><img src="img/new/bouton-d.png"></a>
+    <a href="wildlife-en.html"><img src="img/new/bouton-c.png"></a>
+    <a href="eco-sante-en.html"><img src="img/new/bouton-b.png"></a>
   </div>
 </div>
 
@@ -208,30 +178,18 @@ div.scrollmenu a:hover {
 
 <div class="language">
 
-  <input onclick="Fuctionlanguage()" class="langue" type="image" src="img/new/serb-flag.png">
+  <input onclick="Fuctionlanguage()" class="langue" type="image" src="img/new/uk-flag.png">
 
   <div id="langue-selector" class="langue-content">
-    <a href="wildlife-en.html"><img class="flag-img" src="img/new/uk-flag.png"></a>
+    <a href="core-map-serb.html"><img class="flag-img" src="img/new/serb-flag.png"></a>
   </div>
 </div>
 
-<div class="legend">
-  <div class="legend-title">Wildlife filters</div>
-    <div class="scrollmenu">
-  <a href="#"><img src="img/new/ani-1.png"></a>
-  <a href="#"><img src="img/new/ani-2.png"></a>
-  <a href="#"><img src="img/new/ani-3.png"></a>
-  <a href="#"><img src="img/new/ani-4.png"></a>
-  <a href="#"><img src="img/new/ani-5.png"></a>
-  <a href="#"><img src="img/new/ani-6.png"></a>
-  </div>
+<div class="interactive-map" id='map'>
+  <script src="Cartes/Carte_principale.js"></script>
 </div>
 
-<div class="interactive-map"></div>
-
-</div>
-
-<script>png
+<script>/*png*/
 
 /*php pour les dropdownmenu*/
 /*menu de navigation*/
@@ -274,4 +232,3 @@ window.onclick = function(event) {
 
 </body>
 </html>
-
