--- a/app/src/main/assets/wildlife-en.html
+++ b/app/src/main/assets/wildlife-en.html
@@ -2,23 +2,40 @@
 <html>
 <head>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-   crossorigin=""></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+  <link rel="stylesheet" href="leaflet.css"/>
+   
+  <script src="leaflet.js"></script>
+
+  <script src="jquery.min.js"></script>
+
+  <script src="leaflet.markercluster.js"></script>
+
+  <link rel="stylesheet" href="MarkerCluster.css" />
+
+  <link rel="stylesheet" href="MarkerCluster.Default.css" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 /*css*/
-.pad{width:1200px;
-  height: 1920px;
+@font-face {
+  font-family: 'caviar dreams';
+  src: URL('CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('CaviarDreams_Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Agency FB';
+  src: URL('Agency FB.ttf') format('truetype');
+}
+
+
+.pad{width:775px;
+  height: 1225px;
 margin-left: auto;
 margin-right: auto;
 border-style: solid;
@@ -33,8 +50,9 @@ position: relative;
   font-size: 0px;
   border: none;
   cursor: pointer;
-  width: 140px;
-  height: 168px;
+  width: 120px;
+  height: 144px;
+  z-index: 4;
 
 }
 
@@ -51,21 +69,20 @@ position: relative;
 }
 
 .pad .dropdown a img {
-width: 140px;
-height: 168px;
+  width: 120px;
+  height: 144px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  bottom: 176px;
-  z-index: 1;
+  bottom: 150px;
 }
 
 .dropdown-content a {
   display: block;
+  z-index: 1;
 }
-
 
 .show {display: block;}
 
@@ -75,20 +92,20 @@ height: 168px;
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 355px;
+  top: 2px;
   background-color: #4668B1;
   text-align: center;
   color:white;
   vertical-align: bottom;
-  border-radius: 0px 0px 20px 0px;
+  border-radius: 35px;
   z-index : 2 ;
 }
 .help a {
   color:white;
   position: absolute;
-  top:12px;
-  left: 18px;
+  top:14px;
+  left: 21px;
   text-decoration: none;
   font-size:20px;
   font-family: "Agency FB";
@@ -124,7 +141,7 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   right:0px;
   display: inline-block;
-  padding: 20px;
+  padding: 15px;
   background-color:#4668B1;
   border-radius: 0px 0px 0px 20px;
   z-index: 3;
@@ -136,7 +153,7 @@ box-shadow: black 0px 0px 5px;
  right: 0px;
   z-index: 1;
   background-color: #4668B1;
-  padding: 20px;
+  padding: 15px;
   border-radius: 0px 0px 0px 20px;
 
 }
@@ -150,16 +167,16 @@ box-shadow: black 0px 0px 5px;
 .legend{
   position: absolute;
   background-color: #4668B1;
-  width: 800px;
-  height: 250px;
+  width: 500px;
+  height: 320px;
   right: 0px;
   bottom: 0px;
-  border-radius: 40px 0px 0px 0px;
+  border-radius: 20px 0px 0px 0px;
   z-index: 5;
 }
 .legend-title{
   color: white;
-  font-size:30px;
+  font-size:20px;
   font-family: "Agency FB";
   font-weight:bold;
   padding: 8px;
@@ -167,37 +184,85 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 785px;
+  width: 500px;
+  border-bottom: solid white 2px;
 }
 
-.interactive-map{
-  background-color: #E8E0CA;
-  width:1200px;
-  height: 1920px;
-  z-index: 0;
-}
 div.scrollmenu {
   position: absolute;
-  top: 50px;
+  bottom: 0px;
   background-color: rgb(0, 0, 0,0.2);
   overflow: auto;
   white-space: nowrap;
-  width: 800px;
+  width: 500px;
   z-index: 5;
 }
 
 div.scrollmenu a {
   display: inline-block;
   text-align: center;
-  padding: 14px;
+  padding: 10px;
+
 }
 
 div.scrollmenu a:hover {
   background-color: #777;
 }
+
 .scrollmenu a img{
-  width: 150px;
-  height: 150px;
+  width: 84px;
+  height: 84px;
+}
+
+/* width */
+.scrollmenu::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+.scrollmenu::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.scrollmenu::-webkit-scrollbar-thumb {
+  background: #4668B1;
+  border-radius: 10px;
+  border: solid rgb(0, 0, 0,0.2) 2px
+}
+
+.interactive-map{
+  background-color: #E8E0CA;
+  width:775px;
+  height: 1225px;
+  z-index: 0;
+}
+
+.selected{background-color: #4668B1}
+
+.description{
+
+  width: 480px;
+  position: absolute;
+  top: 42px;
+  left: 20px;
+}
+.description h3{
+  font-size:16px;
+  font-family: caviar dreams bold;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: -10px;
+}
+.description p{
+  font-size:12px;
+  font-family: caviar dreams;
+  color: white;
+  position: absolute;
+  top: 20px;
+
 }
 
 </style>
@@ -212,11 +277,10 @@ div.scrollmenu a:hover {
 
   <div id="myDropdown" class="dropdown-content">
     <a href="eco-parcour-en.html"><img src="img/new/bouton-d.png"></a>
-    <a href="wildlife-en.html"><img src="img/new/bouton-b.png"></a>
-    <a href="core-map-en.html"><img src="img/new/bouton-a.png"></a>
+    <a href="eco-sante-en.html"><img src="img/new/bouton-b.png"></a>
+    <a href="index.html"><img src="img/new/bouton-a.png"></a>
   </div>
 </div>
-
 
 <div class="help"><a href="#">?</a></div>
 
@@ -231,14 +295,37 @@ div.scrollmenu a:hover {
 </div>
 
 <div class="legend">
-  <div class="legend-title">Wildlife filters</div>
+  <div class="legend-title">WILDLIFE FILTERS</div>
+
+  <div class="description"><h3>Wild boar :</h3>
+    <p>Wild boar can reach 3 to 6.5 feet in length, 21.6 to 39.3 inches in height and 90 to 700 pounds in weight.
+      It has long, rubbery snout that is used for digging of underground roots and bulbs.
+      It feeds mainly on the seed, fruits, leaves, berries, eggs, mice, lizards, worms and snakes.
+      Wild boars are nocturnal animals. They will spend 12h in sleep during the day, hidden in the nests made of leaves. </p>
+  </div>
+
     <div class="scrollmenu">
-  <a href="#"><img src="img/new/ani-1.png" onclick="doalert(this); return false"></a>
-  <a href="#"><img src="img/new/ani-2.png" onclick="doalert(this); return false;"></a>
-  <a href="#"><img src="img/new/ani-3.png" onclick="doalert(this); return false;"></a>
-  <a href="#"><img src="img/new/ani-4.png" onclick="doalert(this); return false;"></a>
-  <a href="#"><img src="img/new/ani-5.png" onclick="doalert(this); return false;"></a>
-  <a href="#"><img src="img/new/ani-6.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/sanglier.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/herisson.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/cerf.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/ecureuil.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/lievre.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/taupe.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/rat.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/renard.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/blaireau_europeen.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/mouton.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/souslik.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/ours.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/courlis.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/aigle.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/rollier.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/pelican.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/robinier_faux_acacia.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/raisin_damerique.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/erable_plane.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/chicoree.png" onclick="doalert(this); return false;"></a>
+
   </div>
 </div>
 
@@ -247,8 +334,7 @@ div.scrollmenu a:hover {
 </div>
 
 </div>
-
-<script>png
+<script>/*png*/
 
 /*php pour les dropdownmenu*/
 /*menu de navigation*/
@@ -286,6 +372,7 @@ window.onclick = function(event) {
     }
   }
 }
+
 </script>
 
 
