--- a/app/src/main/assets/wildlife-serb.html
+++ b/app/src/main/assets/wildlife-serb.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+
+  <link rel="stylesheet" href="leaflet.css"/>
+
+  <script src="leaflet.js"></script>
+
+  <script src="jquery.min.js"></script>
+
+  <script src="leaflet.markercluster.js"></script>
+
+  <link rel="stylesheet" href="MarkerCluster.css" />
+
+  <link rel="stylesheet" href="MarkerCluster.Default.css" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
 
 /*css*/
-.pad{width:1200px;
-  height: 1920px;
+
+@font-face {
+  font-family: 'caviar dreams';
+  src: URL('CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('CaviarDreams_Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Agency FB';
+  src: URL('Agency FB.ttf') format('truetype');
+}
+
+.pad{width:775px;
+  height: 1225px;
 margin-left: auto;
 margin-right: auto;
 border-style: solid;
@@ -21,8 +50,8 @@ position: relative;
   font-size: 0px;
   border: none;
   cursor: pointer;
-  width: 140px;
-  height: 168px;
+  width: 120px;
+  height: 144px;
 
 }
 
@@ -35,17 +64,18 @@ position: relative;
   left: 20px;
   bottom: 20px;
   display: inline-block;
+  z-index: 4;
 }
 
 .pad .dropdown a img {
-width: 140px;
-height: 168px;
+  width: 120px;
+  height: 144px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  bottom: 176px;
+  bottom: 150px;
   z-index: 1;
 }
 
@@ -62,19 +92,20 @@ height: 168px;
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 355px;
+  top: 2px;
   background-color: #4668B1;
   text-align: center;
   color:white;
   vertical-align: bottom;
-  border-radius: 0px 0px 20px 0px;
+  border-radius: 35px;
+  z-index : 2 ;
 }
 .help a {
   color:white;
   position: absolute;
-  top:12px;
-  left: 18px;
+  top:14px;
+  left: 21px;
   text-decoration: none;
   font-size:20px;
   font-family: "Agency FB";
@@ -83,7 +114,7 @@ height: 168px;
 
 /*selection de la langue*/
 
-.flag-img{ 
+.flag-img{
 width: 50px;
 height: 30px;
 box-shadow: black 0px 0px 5px;
@@ -110,9 +141,10 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   right:0px;
   display: inline-block;
-  padding: 20px;
+  padding: 15px;
   background-color:#4668B1;
   border-radius: 0px 0px 0px 20px;
+  z-index: 3;
 }
 
 .langue-content {
@@ -121,7 +153,7 @@ box-shadow: black 0px 0px 5px;
  right: 0px;
   z-index: 1;
   background-color: #4668B1;
-  padding: 20px;
+  padding: 15px;
   border-radius: 0px 0px 0px 20px;
 
 }
@@ -135,17 +167,16 @@ box-shadow: black 0px 0px 5px;
 .legend{
   position: absolute;
   background-color: #4668B1;
-  width: 800px;
-  height: 250px;
+  width: 500px;
+  height: 320px;
   right: 0px;
   bottom: 0px;
-  border-radius: 40px 0px 0px 0px;
-
-
+  border-radius: 20px 0px 0px 0px;
+  z-index: 5;
 }
 .legend-title{
   color: white;
-  font-size:30px;
+  font-size:20px;
   font-family: "Agency FB";
   font-weight:bold;
   padding: 8px;
@@ -153,27 +184,25 @@ box-shadow: black 0px 0px 5px;
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 785px;
+  width: 520px;
+  border-bottom: solid white 2px;
 }
 
-.interactive-map{
-  background-color: #E8E0CA;
-  width:1200px;
-  height: 1920px;
-}
+
 div.scrollmenu {
   position: absolute;
-  top: 50px;
+  bottom: 0px;
   background-color: rgb(0, 0, 0,0.2);
   overflow: auto;
   white-space: nowrap;
-  width: 800px;
+  width: 500px;
+  z-index: 5;
 }
 
 div.scrollmenu a {
   display: inline-block;
   text-align: center;
-  padding: 14px;
+  padding: 10px;
 
 }
 
@@ -181,8 +210,59 @@ div.scrollmenu a:hover {
   background-color: #777;
 }
 .scrollmenu a img{
-  width: 150px;
-  height: 150px;
+  width: 84px;
+  height: 84px;
+}
+
+/* width */
+.scrollmenu::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+.scrollmenu::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.scrollmenu::-webkit-scrollbar-thumb {
+  background: #4668B1;
+  border-radius: 10px;
+  border: solid rgb(0, 0, 0,0.2) 2px
+}
+
+.interactive-map{
+  background-color: #E8E0CA;
+  width:775px;
+  height: 1225px;
+  z-index: 0;
+}
+
+.selected{background-color: #4668B1}
+
+.description{
+
+  width: 480px;
+  position: absolute;
+  top: 42px;
+  left: 20px;
+}
+.description h3{
+  font-size:16px;
+  font-family: caviar dreams bold;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: -10px;
+}
+.description p{
+  font-size:12px;
+  font-family: caviar dreams;
+  color: white;
+  position: absolute;
+  top: 20px;
+
 }
 
 </style>
@@ -191,47 +271,71 @@ div.scrollmenu a:hover {
 
 
 <div class="pad">
-<div class="dropdown">
+  <div class="dropdown">
 
-  <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
+    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
 
-  <div id="myDropdown" class="dropdown-content">
-    <a href="eco-parcour-serb.html"><img src="img/new/bouton-d.png"></a>
-    <a href="eco-sante-serb.html"><img src="img/new/bouton-b.png"></a>
-    <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+    <div id="myDropdown" class="dropdown-content">
+      <a href="eco-parcour-serb.html"><img src="img/new/bouton-d.png"></a>
+      <a href="eco-sante-serb.html"><img src="img/new/bouton-b.png"></a>
+      <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+    </div>
   </div>
-</div>
 
 
-<div class="help"><a href="#">?</a></div>
+  <div class="help"><a href="#">?</a></div>
 
 
-<div class="language">
+  <div class="language">
 
-  <input onclick="Fuctionlanguage()" class="langue" type="image" src="img/new/serb-flag.png">
+    <input onclick="Fuctionlanguage()" class="langue" type="image" src="img/new/serb-flag.png">
 
-  <div id="langue-selector" class="langue-content">
-    <a href="wildlife-en.html"><img class="flag-img" src="img/new/uk-flag.png"></a>
+    <div id="langue-selector" class="langue-content">
+      <a href="wildlife-en.html"><img class="flag-img" src="img/new/uk-flag.png"></a>
+    </div>
   </div>
-</div>
 
-<div class="legend">
-  <div class="legend-title">Wildlife filters</div>
+  <div class="legend">
+    <div class="legend-title">WILDLIFE FILTERS</div>
+
+    <div class="description"><h3>Wild boar :</h3>
+      <p>Wild boar can reach 3 to 6.5 feet in length, 21.6 to 39.3 inches in height and 90 to 700 pounds in weight.
+        It has long, rubbery snout that is used for digging of underground roots and bulbs.
+        It feeds mainly on the seed, fruits, leaves, berries, eggs, mice, lizards, worms and snakes.
+        Wild boars are nocturnal animals. They will spend 12h in sleep during the day, hidden in the nests made of leaves. </p>
+    </div>
+
     <div class="scrollmenu">
-  <a href="#"><img src="img/new/ani-1.png"></a>
-  <a href="#"><img src="img/new/ani-2.png"></a>
-  <a href="#"><img src="img/new/ani-3.png"></a>
-  <a href="#"><img src="img/new/ani-4.png"></a>
-  <a href="#"><img src="img/new/ani-5.png"></a>
-  <a href="#"><img src="img/new/ani-6.png"></a>
+      <a href="#"><img src="Cartes/Wildlife/sanglier.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/herisson.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/cerf.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/ecureuil.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/lievre.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/taupe.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/rat.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/renard.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/blaireau_europeen.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/mouton.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/souslik.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/ours.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/courlis.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/aigle.png" onclick="doalert(this); return false"></a>
+      <a href="#"><img src="Cartes/Wildlife/rollier.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/pelican.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/robinier_faux_acacia.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/raisin_damerique.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/erable_plane.png" onclick="doalert(this); return false;"></a>
+      <a href="#"><img src="Cartes/Wildlife/chicoree.png" onclick="doalert(this); return false;"></a>
+    </div>
   </div>
+
+  <div class="interactive-map" id="map">
+    <script src="Cartes/Carte_wildlife.js"></script>
+  </div>
+
 </div>
 
-<div class="interactive-map"></div>
-
-</div>
-
-<script>png
+<script>/*png*/
 
 /*php pour les dropdownmenu*/
 /*menu de navigation*/
@@ -274,4 +378,3 @@ window.onclick = function(event) {
 
 </body>
 </html>
-
