--- a/app/src/main/assets/eco-parcour-serb.html
+++ b/app/src/main/assets/eco-parcour-serb.html
@@ -150,6 +150,14 @@ box-shadow: black 0px 0px 5px;
 
 .show {display: block;}
 
+.logo {
+  position: absolute;
+  left: 0px;
+  top: 500px;
+  color:white;
+  z-index : 2 ;
+}
+
 .interactive-map{
   background-color: #E8E0CA;
   width:775px;
@@ -183,8 +191,9 @@ box-shadow: black 0px 0px 5px;
   </div>
 
 
-  <div class="help"><a href="#">?</a></div>
+  <div class="help"><a href="tuto/tuto-page-1.html">?</a></div>
 
+  <div class=logo><img src=img/new/logo_appli.png width="50"></div>
 
   <div class="language">
 
