--- a/app/src/main/assets/wildlife-serb.html
+++ b/app/src/main/assets/wildlife-serb.html
@@ -232,6 +232,14 @@ div.scrollmenu a:hover {
   border: solid rgb(0, 0, 0,0.2) 2px
 }
 
+.logo {
+  position: absolute;
+  left: 0px;
+  top: 500px;
+  color:white;
+  z-index : 2 ;
+}
+
 .interactive-map{
   background-color: #E8E0CA;
   width:775px;
@@ -283,8 +291,9 @@ div.scrollmenu a:hover {
   </div>
 
 
-  <div class="help"><a href="#">?</a></div>
+  <div class="help"><a href="tuto/tuto-page-1.html">?</a></div>
 
+  <div class=logo><img src=img/new/logo_appli.png width="50"></div>
 
   <div class="language">
 
