--- a/app/src/main/assets/tuto/tuto-page-7.html
+++ b/app/src/main/assets/tuto/tuto-page-7.html
@@ -10,13 +10,14 @@ margin-right: auto;
 position: relative;
 }
 
-
 </style>
 </head>
 <body>
 <div class="pad">
 <a href="tuto-page-8.html">
-<video autoplay muted><source src="vid/anim-ecotrack.mp4" type="video/mp4"></video>
+    <video autoplay muted>
+        <source src="vid/anim-ecotrack.mp4" type="video/mp4" />
+    </video>
 </a>
 </div>
 </body>
