--- a/app/src/main/assets/tuto/tuto-page-4.html
+++ b/app/src/main/assets/tuto/tuto-page-4.html
@@ -16,7 +16,9 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-5.html">
-<video autoplay muted><source src="vid/anim-ecohealth.mp4" type="video/mp4"></video>
+<video preload autobuffer autoplay muted>
+    <source src="vid/anim_ecohealth.mp4" type="video/mp4"/>
+</video>
 </a>
 </div>
 </body>
