--- a/app/src/main/assets/tuto/tuto-page-9.html
+++ b/app/src/main/assets/tuto/tuto-page-9.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style type="text/css">
 
 @font-face {
   font-family: 'caviar dreams';
@@ -35,14 +35,18 @@ p{	font-size: 30px;
 	top:210px;
 	left: 200px;
 }
+
+
+
 </style>
 </head>
 <body>
 <a href="../index.html">
-<div class="pad">
-	<img src="img/bulle-g.png">
-	<p>- click to continue -</p>
-</div>
+	<div class="pad">
+
+		<img src="img/bulle_g.png"></div>
+		<p>- click to continue -</p>
+	</div>
 </a>
 </body>
 </html>
