--- a/app/src/main/assets/eco-sante-serb.html
+++ b/app/src/main/assets/eco-sante-serb.html
@@ -216,21 +216,20 @@ box-shadow: black 0px 0px 5px;
 </head>
 <body>
 
-
 <div class="pad">
   <div class="dropdown">
 
-    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
+    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres-serb.png">
 
     <div id="myDropdown" class="dropdown-content">
-      <a href="eco-parcour-serb.html"><img src="img/new/bouton-d.png"></a>
-      <a href="wildlife-serb.html"><img src="img/new/bouton-c.png"></a>
-      <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+      <a href="eco-parcour-serb.html"><img src="img/new/bouton-d-serb.png"></a>
+      <a href="wildlife-serb.html"><img src="img/new/bouton-c-serb.png"></a>
+      <a href="core-map-serb.html"><img src="img/new/bouton-a-serb.png"></a>
     </div>
   </div>
 
 
-  <div class="help"><a href="tuto/tuto-page-1.html">?</a></div>
+  <div class="help"><a href="tuto/tuto-page-1-serb.html">?</a></div>
 
   <div class=logo><img src=img/new/logo_appli.png width="50"></div>
 
@@ -244,13 +243,13 @@ box-shadow: black 0px 0px 5px;
   </div>
 
   <div class="legend">
-    <h3><div class="title-legend">LEGEND</div></h3>
+    <h3><div class="title-legend">LEGENDA</div></h3>
 
-    <img src="img/new/eco-sante-legend.png">
+    <img src="img/new/eco-sante-legend-serb.png">
   </div>
 
   <div class="interactive-map" id='map'>
-    <script src="Cartes/Carte_ecosante.js"></script>
+    <script src="Cartes/Carte_ecosante_serb.js" charset="utf-8"></script>
   </div>
 
 </div>
