--- a/app/src/main/assets/wildlife-serb.html
+++ b/app/src/main/assets/wildlife-serb.html
@@ -281,17 +281,17 @@ div.scrollmenu a:hover {
 <div class="pad">
   <div class="dropdown">
 
-    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
+    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres-serb.png">
 
     <div id="myDropdown" class="dropdown-content">
-      <a href="eco-parcour-serb.html"><img src="img/new/bouton-d.png"></a>
-      <a href="eco-sante-serb.html"><img src="img/new/bouton-b.png"></a>
-      <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+      <a href="eco-parcour-serb.html"><img src="img/new/bouton-d-serb.png"></a>
+      <a href="eco-sante-serb.html"><img src="img/new/bouton-b-serb.png"></a>
+      <a href="core-map-serb.html"><img src="img/new/bouton-a-serb.png"></a>
     </div>
   </div>
 
 
-  <div class="help"><a href="tuto/tuto-page-1.html">?</a></div>
+  <div class="help"><a href="tuto/tuto-page-1-serb.html">?</a></div>
 
   <div class=logo><img src=img/new/logo_appli.png width="50"></div>
 
@@ -305,13 +305,10 @@ div.scrollmenu a:hover {
   </div>
 
   <div class="legend">
-    <div class="legend-title">WILDLIFE FILTERS</div>
+    <div class="legend-title">DIVLJINA FILTERI</div>
 
-    <div class="description"><h3>Wild boar :</h3>
-      <p>Wild boar can reach 3 to 6.5 feet in length, 21.6 to 39.3 inches in height and 90 to 700 pounds in weight.
-        It has long, rubbery snout that is used for digging of underground roots and bulbs.
-        It feeds mainly on the seed, fruits, leaves, berries, eggs, mice, lizards, worms and snakes.
-        Wild boars are nocturnal animals. They will spend 12h in sleep during the day, hidden in the nests made of leaves. </p>
+    <div class="description"><h3>Divlja svinja :</h3>
+      <p>Divlja svinja može dostići dižinu od 0,9 do 2 metra, visinu od 0,5 do 1 metra i težinu od 40 do 317 kilograma. Ima dugačku gumenastu njušku kojom iskopava podzemne iskopava korene i lukovice. Uglavnom sehrani semenjem, voćem, lišćem, bovicama, jajima, miševima, gušterima, crvima i zmijama. Tokom dana provedu i do 12 sati spavajući sakrivene u gnezdu napravljenom od lišća. </p>
     </div>
 
     <div class="scrollmenu">
@@ -339,7 +336,7 @@ div.scrollmenu a:hover {
   </div>
 
   <div class="interactive-map" id="map">
-    <script src="Cartes/Carte_wildlife.js"></script>
+    <script src="Cartes/Carte_wildlife_serb.js"></script>
   </div>
 
 </div>
