--- a/app/src/main/assets/eco-parcour-serb.html
+++ b/app/src/main/assets/eco-parcour-serb.html
@@ -181,17 +181,17 @@ box-shadow: black 0px 0px 5px;
 <div class="pad">
   <div class="dropdown">
 
-    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres.png">
+    <input onclick="myFunction()" class="dropbtn" type="image" src="img/new/filtres-serb.png">
 
     <div id="myDropdown" class="dropdown-content">
-      <a href="wildlife-serb.html"><img src="img/new/bouton-c.png"></a>
-      <a href="eco-sante-serb.html"><img src="img/new/bouton-b.png"></a>
-      <a href="core-map-serb.html"><img src="img/new/bouton-a.png"></a>
+      <a href="wildlife-serb.html"><img src="img/new/bouton-c-serb.png"></a>
+      <a href="eco-sante-serb.html"><img src="img/new/bouton-b-serb.png"></a>
+      <a href="core-map-serb.html"><img src="img/new/bouton-a-serb.png"></a>
     </div>
   </div>
 
 
-  <div class="help"><a href="tuto/tuto-page-1.html">?</a></div>
+  <div class="help"><a href="tuto/tuto-page-1-serb.html">?</a></div>
 
   <div class=logo><img src=img/new/logo_appli.png width="50"></div>
 
@@ -204,7 +204,7 @@ box-shadow: black 0px 0px 5px;
     </div>
   </div>
   <div class="interactive-map" id='map'>
-    <script src="Cartes/Carte_parcours.js"></script>
+    <script src="Cartes/Carte_parcours_serb.js" charset="utf-8"></script>
   </div>
 
 </div>
