--- a/app/src/main/assets/tuto/tuto-page-4-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-4-serb.html
@@ -16,7 +16,7 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-5-serb.html">
-<video preload autobuffer autoplay muted>
+<video preload autobuffer autoplay muted poster="img/tuto-plan1-serb.png">
     <source src="vid/anim-ecohealth-serb.mp4" type="video/mp4">
 </video>
 </a>
