--- a/app/src/main/assets/tuto/tuto-page-5.html
+++ b/app/src/main/assets/tuto/tuto-page-5.html
@@ -16,7 +16,7 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-6.html">
-<video autoplay muted>
+<video autoplay muted poster="img/Tuto-plan2.png">
     <source src="vid/anim-ecohealth-2.mp4" type="video/mp4" />
 </video>
 </a>
