--- a/app/src/main/assets/tuto/tuto-page-2-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-2-serb.html
@@ -6,7 +6,12 @@
 
 @font-face {
   font-family: 'caviar dreams';
-  src: URL('../CaviarDreams.ttf') format('truetype');
+  src: URL('../Fonts/CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('../Fonts/CaviarDreams_Bold.ttf') format('truetype');
 }
 
 .pad{width:775px;
@@ -38,10 +43,10 @@ h3{
 }
 p{	font-size: 30px;
 	color: black;
-	font-family: caviar dreams;
+	font-family: caviar dreams bold;
 	position: absolute;
 	top:730px;
-	left: 258px;
+	left: 250px;
 	text-align: center;
 
 }
