--- a/app/src/main/assets/tuto/tuto-page-3-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-3-serb.html
@@ -6,7 +6,12 @@
 
 @font-face {
   font-family: 'caviar dreams';
-  src: URL('../CaviarDreams.ttf') format('truetype');
+  src: URL('../Fonts/CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('../Fonts/CaviarDreams_Bold.ttf') format('truetype');
 }
 
 .pad{width:775px;
@@ -35,7 +40,7 @@ background-size: 775px 1225px;
 }
 p{	font-size: 30px;
 	color: black;
-	font-family: caviar dreams;
+	font-family: caviar dreams bold;
 	position: absolute;
 	top:1080px;
 	left: 315px;
