--- a/app/src/main/assets/tuto/tuto-page-4.html
+++ b/app/src/main/assets/tuto/tuto-page-4.html
@@ -3,20 +3,20 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
+
 .pad{width:775px;
   height: 1225px;
 margin-left: auto;
 margin-right: auto;
-position: relative;
+position: absolute;
 }
-
 
 </style>
 </head>
 <body>
 <div class="pad">
 <a href="tuto-page-5.html">
-<video preload autobuffer autoplay muted>
+<video preload autobuffer autoplay muted poster="img/tuto-plan1.png">
     <source src="vid/anim_ecohealth.mp4" type="video/mp4"/>
 </video>
 </a>
