--- a/app/src/main/assets/tuto/tuto-page-6.html
+++ b/app/src/main/assets/tuto/tuto-page-6.html
@@ -16,7 +16,7 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-7.html">
-<video autoplay muted>
+<video autoplay muted poster="img/Tuto-plan3.png">
     <source src="vid/anim-wildlife.mp4" type="video/mp4" />
 </video>
 </a>
