--- a/app/src/main/assets/tuto/tuto-page-7-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-7-serb.html
@@ -16,7 +16,7 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-8-serb.html">
-<video autoplay muted>
+<video autoplay muted poster="img/Tuto-plan-serb4.png">
     <source src="vid/anim-ecotrack-serb.mp4" type="video/mp4">
 </video>
 </a>
