--- a/app/src/main/assets/tuto/tuto-page-7.html
+++ b/app/src/main/assets/tuto/tuto-page-7.html
@@ -15,7 +15,7 @@ position: relative;
 <body>
 <div class="pad">
 <a href="tuto-page-8.html">
-    <video autoplay muted>
+    <video autoplay muted poster="img/Tuto-plan4.png">
         <source src="vid/anim-ecotrack.mp4" type="video/mp4" />
     </video>
 </a>
